# melia-facebook-ads

./: .env.example  .gitattributes  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  deploy.sh  fb-worker.service  pyproject.toml
.claude/skills/meta-ads-strategist/: SKILL.md
.claude/skills/meta-ads-strategist/evals/: evals.json
.claude/skills/meta-ads-strategist/references/: benchmarks.md  creative.md  launch.md  learning.md  planning.md  policy.md  project-context.md  tracking.md
alembic/: env.py
alembic/versions/: 0001_initial_meta_schema.py  0002_ig_boost_state.py
research/: 01-mcp-servers.md  02-marketing-api.md  03-lead-ads-crm.md  04-access-auth-limits.md  05-gotchas.md  06-strategy-2026.md  README.md  sources.md
scripts/: backfill_phones.py  token_health.py
src/meta_ads/: config.py  security.py
src/meta_ads/boost/: engine.py  lint.py
src/meta_ads/channels/: base.py
src/meta_ads/channels/meta/: campaigns.py  channel.py  client.py  conversions.py  creatives.py  leadforms.py  leads.py  reporting.py
src/meta_ads/cli/: main.py
src/meta_ads/cli/commands/: auth.py  campaign.py  conversions.py  creative.py  leads.py  sync.py
src/meta_ads/conversions/: capi_drain.py  hashing.py  taxonomy.py
src/meta_ads/db/: __init__.py  models.py  session.py
src/meta_ads/ingest/: resolver.py
src/meta_ads/mcp/: __main__.py
src/meta_ads/mcp/tools/: analytics.py  mutation.py  planning.py  read.py
src/meta_ads/worker/: listen.py  main.py
src/meta_ads/worker/jobs/: capi_drain.py  ig_boost.py  lead_poll.py  lead_resolve.py  moderation.py  pacing.py  perf_pull.py
strategy/: decisions.md  experiments.md  learnings.md  media-plan.md
tests/: test_ig_boost_job.py  test_ig_boost_lint.py  test_smoke.py
